# OpenPlanter

agent/: __main__.py  engine.py  model.py  prompts.py  runtime.py  textual_tui.py  tui.py
openplanter-desktop/: .gitignore  Cargo.toml
openplanter-desktop/crates/op-core/: Cargo.toml
openplanter-desktop/crates/op-core/src/: builder.rs  credentials.rs  events.rs
openplanter-desktop/crates/op-core/src/engine/: context.rs  (+2 more)
openplanter-desktop/crates/op-core/tests/: test_model_streaming.rs
openplanter-desktop/crates/op-tauri/: Cargo.toml  tauri.conf.json
openplanter-desktop/crates/op-tauri/src/: bridge.rs  main.rs  state.rs
openplanter-desktop/crates/op-tauri/src/commands/: agent.rs  config.rs  session.rs  wiki.rs
openplanter-desktop/frontend/: package-lock.json  package.json  vitest.config.ts
openplanter-desktop/frontend/e2e/: graph-pane.spec.ts  streaming.spec.ts
openplanter-desktop/frontend/e2e/fixtures/: graph-data.ts
openplanter-desktop/frontend/src/: main.ts
openplanter-desktop/frontend/src/__mocks__/: tauri.ts
openplanter-desktop/frontend/src/api/: events.ts  invoke.ts  types.ts
openplanter-desktop/frontend/src/commands/: model.test.ts  reasoning.test.ts  slash.test.ts  slash.ts
openplanter-desktop/frontend/src/components/: App.ts  ChatPane.test.ts  ChatPane.ts  GraphPane.ts  InputBar.ts  StatusBar.ts
openplanter-desktop/frontend/src/graph/: colors.ts  cytoGraph.ts  force.ts  interaction.ts
openplanter-desktop/frontend/src/state/: store.ts
openplanter-desktop/frontend/src/styles/: main.css  theme.css
tests/: test_wiki_graph.py
(+16 files in other folders)
